fix: wraps long multiple choice question answers

--- a/src/app/modules/learning/knowledge-component/learning-objects/multiple-choice-question/multiple-choice-question.component.scss
+++ b/src/app/modules/learning/knowledge-component/learning-objects/multiple-choice-question/multiple-choice-question.component.scss
@@ -1,15 +1,19 @@
+:host ::ng-deep .mat-radio-label-content {
+  white-space: normal !important;
+}
+
 :host ::ng-deep .color-correct .mat-radio-label-content {
-  color: #3CA0FF !important
+  color: #3ca0ff !important;
 }
 
 :host ::ng-deep .color-wrong .mat-radio-label-content {
-  color: #FF3C47 !important
+  color: #ff3c47 !important;
 }
 
 .color-correct {
-  color: #3CA0FF
+  color: #3ca0ff;
 }
 
 .color-wrong {
-  color: #FF3C47
+  color: #ff3c47;
 }
